--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ db.sqlite3-wal
 .vscode/
 staticfiles/
 *.http
+.history/
+.requirements.txt
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
