--- a/.ebextensions/03_db_timeout.config
+++ b/.ebextensions/03_db_timeout.config
@@ -7,7 +7,7 @@ files:
       [mysqld]
       datadir=/var/lib/mysql
       socket=/var/lib/mysql/mysql.sock
-      max_allowed_packet = 300M
+      max_allowed_packet=1073741824
       # Disabling symbolic-links is recommended to prevent assorted security risks
       symbolic-links=0
       # Settings user and group are ignored when systemd is used.
