--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,4 @@
-option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: kingspinai.wsgi:application
+#option_settings:
+#  aws:elasticbeanstalk:container:python:
+#    WSGIPath: kingspinai.wsgi:application
 
