--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-shm
 db.sqlite3-wal
-.vscode/
-staticfiles/
+.vscode
+staticfiles
 *.http
-.history/
+.history
 .requirements.txt
 cache/*/*
 temp/*
